# tcc-roguelike-assets-generator

./: pyproject.toml
src/: asset_generator.py  config.py  database.db  llm_models.py  scratch.py  tester.py  vector_db.py
src/chroma_entities_db/: chroma.sqlite3
src/chroma_environments_db/: chroma.sqlite3
src/chroma_items_db/: chroma.sqlite3
src/public/viewer/: style.css
src/tests/: p_1_openai_gpt_oss_20b_bundle.txt
src/tests/gpt_oss_120b/: bundle_astral_floating_library_openai_gpt_oss_120b_7e14d7.json  bundle_blood_moon_yokai_village_openai_gpt_oss_120b_5160a0.json  bundle_clockwork_purgatory_openai_gpt_oss_120b_747ba4.json  bundle_corrupted_gold_mines_openai_gpt_oss_120b_679ce1.json  bundle_crystalline_alien_mothership_openai_gpt_oss_120b_06afe2.json  bundle_dieselpunk_necromancy_trenches_openai_gpt_oss_120b_bbca98.json  bundle_eldritch_flesh_labyrinth_openai_gpt_oss_120b_d1642a.json  bundle_frozen_citadel_openai_gpt_oss_120b_53d252.json  bundle_neon_gothic_underwater_openai_gpt_oss_120b_97cfda.json  bundle_overgrown_space_station_openai_gpt_oss_120b_0f9540.json  bundle_radioactive_amusement_park_openai_gpt_oss_120b_704dd4.json  bundle_surreal_dreamscape_openai_gpt_oss_120b_e8895a.json  bundle_titan_bone_desert_openai_gpt_oss_120b_5bdcf8.json  bundle_toxic_cyberpunk_slum_openai_gpt_oss_120b_77cb26.json  bundle_victorian_ghost_train_openai_gpt_oss_120b_24cdac.json  eval_astral_floating_library_openai_gpt_oss_120b_7e14d7.json  eval_blood_moon_yokai_village_openai_gpt_oss_120b_5160a0.json  eval_clockwork_purgatory_openai_gpt_oss_120b_747ba4.json  (+12 more)
(+180 files in other folders)
